@@ -1,3 +1,8 @@
+2013-08-20  Alexey Makhalov  <makhaloff@gmail.com>
+
+	* dce.c (fini_dce): Call df_analyze again just in case
+	delete_unmarked_insns removed anything.
+
 2013-08-20  Teresa Johnson  <tejohnson@google.com>
 
 	PR rtl-optimizations/57451
